--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
                 </div>
             </div>
             <div class="procart">
-                <svg class="cart" width="22" height="20" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M20.925 3.641H3.863L3.61.816A.896.896 0 0 0 2.717 0H.897a.896.896 0 1 0 0 1.792h1l1.031 11.483c.073.828.52 1.726 1.291 2.336C2.83 17.385 4.099 20 6.359 20c1.875 0 3.197-1.87 2.554-3.642h4.905c-.642 1.77.677 3.642 2.555 3.642a2.72 2.72 0 0 0 2.717-2.717 2.72 2.72 0 0 0-2.717-2.717H6.365c-.681 0-1.274-.41-1.53-1.009l14.321-.842a.896.896 0 0 0 .817-.677l1.821-7.283a.897.897 0 0 0-.87-1.114ZM6.358 18.208a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm10.015 0a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm2.021-7.243-13.8.81-.57-6.341h15.753l-1.383 5.53Z" fill="#69707D" fill-rule="nonzero"/>
-                </svg>
-                </svg>
+                <div class="shopping">
+                    <svg class="cart" width="22" height="20" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M20.925 3.641H3.863L3.61.816A.896.896 0 0 0 2.717 0H.897a.896.896 0 1 0 0 1.792h1l1.031 11.483c.073.828.52 1.726 1.291 2.336C2.83 17.385 4.099 20 6.359 20c1.875 0 3.197-1.87 2.554-3.642h4.905c-.642 1.77.677 3.642 2.555 3.642a2.72 2.72 0 0 0 2.717-2.717 2.72 2.72 0 0 0-2.717-2.717H6.365c-.681 0-1.274-.41-1.53-1.009l14.321-.842a.896.896 0 0 0 .817-.677l1.821-7.283a.897.897 0 0 0-.87-1.114ZM6.358 18.208a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm10.015 0a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm2.021-7.243-13.8.81-.57-6.341h15.753l-1.383 5.53Z" fill="#69707D" fill-rule="nonzero"/>
+                    </svg>
+                    <div class="badge"></div>
+                </div>
                 <div class="profile"></div>
             </div>    
         </header>
@@ -39,16 +41,16 @@
                 <div class="big-photo"></div>
                 <div class="small-photos">
                     <div class="photo1">
-                        <img src="images/image-product-1-thumbnail.jpg">
+                        <img class="photo1-img" src="images/image-product-1-thumbnail.jpg">
                     </div>
                     <div class="photo2">
-                        <img src="images/image-product-2-thumbnail.jpg">
+                        <img class="photo2-img" src="images/image-product-2-thumbnail.jpg">
                     </div>
                     <div class="photo3">
-                        <img src="images/image-product-3-thumbnail.jpg">
+                        <img class="photo3-img" src="images/image-product-3-thumbnail.jpg">
                     </div>
                     <div class="photo4">
-                        <img src="images/image-product-4-thumbnail.jpg">
+                        <img class="photo4-img" src="images/image-product-4-thumbnail.jpg">
                     </div>
                 </div>
             </div>
@@ -78,6 +80,32 @@
                 </div>
             </div>
         </main>
+        <div class="popup-shadow"></div>
+        <div class="pupup-container">
+            <svg width="14" height="15" xmlns="http://www.w3.org/2000/svg">
+                <path d="m11.596.782 2.122 2.122L9.12 7.499l4.597 4.597-2.122 2.122L7 9.62l-4.595 4.597-2.122-2.122L4.878 7.5.282 2.904 2.404.782l4.595 4.596L11.596.782Z" fill="#69707D" fill-rule="evenodd"/>
+            </svg>
+            <div class="slider">
+                <div class="left-button"></div>
+                <div class="slide"></div>
+                <div class="right-button"></div>
+            </div>
+            <div class="small-photos">
+                <div class="photo1">
+                    <img class="photo1-img" src="images/image-product-1-thumbnail.jpg">
+                </div>
+                <div class="photo2">
+                    <img class="photo2-img" src="images/image-product-2-thumbnail.jpg">
+                </div>
+                <div class="photo3">
+                    <img class="photo3-img" src="images/image-product-3-thumbnail.jpg">
+                </div>
+                <div class="photo4">
+                    <img class="photo4-img" src="images/image-product-4-thumbnail.jpg">
+                </div>
+            </div>
+        </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
