büyük resme tıklayınca açılan popup tamamlandı

--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sneakers</title>
-    <link rel="icon" type="image/jpg" href="sneakers-logo.jpg"/>
+    <link rel="icon" type="image/svg" href="images/logo.svg"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="path/to/fontawesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
 </head>
 <body>
     <div class="container">
@@ -28,9 +25,7 @@
             </div>
             <div class="procart">
                 <div class="shopping">
-                    <svg class="cart" width="22" height="20" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M20.925 3.641H3.863L3.61.816A.896.896 0 0 0 2.717 0H.897a.896.896 0 1 0 0 1.792h1l1.031 11.483c.073.828.52 1.726 1.291 2.336C2.83 17.385 4.099 20 6.359 20c1.875 0 3.197-1.87 2.554-3.642h4.905c-.642 1.77.677 3.642 2.555 3.642a2.72 2.72 0 0 0 2.717-2.717 2.72 2.72 0 0 0-2.717-2.717H6.365c-.681 0-1.274-.41-1.53-1.009l14.321-.842a.896.896 0 0 0 .817-.677l1.821-7.283a.897.897 0 0 0-.87-1.114ZM6.358 18.208a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm10.015 0a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm2.021-7.243-13.8.81-.57-6.341h15.753l-1.383 5.53Z" fill="#69707D" fill-rule="nonzero"/>
-                    </svg>
+                    <img class="cart" src="images/icon-cart.svg" alt="">
                     <div class="badge"></div>
                 </div>
                 <div class="profile"></div>
@@ -81,16 +76,23 @@
             </div>
         </main>
         <div class="popup-shadow"></div>
-        <div class="pupup-container">
-            <svg width="14" height="15" xmlns="http://www.w3.org/2000/svg">
-                <path d="m11.596.782 2.122 2.122L9.12 7.499l4.597 4.597-2.122 2.122L7 9.62l-4.595 4.597-2.122-2.122L4.878 7.5.282 2.904 2.404.782l4.595 4.596L11.596.782Z" fill="#69707D" fill-rule="evenodd"/>
-            </svg>
-            <div class="slider">
-                <div class="left-button"></div>
-                <div class="slide"></div>
-                <div class="right-button"></div>
+        <div class="popup-container">
+            <div class="close">
+                <img src="images/icon-close.svg" alt="">
             </div>
-            <div class="small-photos">
+            <div class="slider">
+                <div class="left-button"><img src="images/icon-previous.svg" alt=""></div>
+                    <div class="frame">
+                        <div class="slide">
+                            <div class="slide1"></div>
+                            <div class="slide2"></div>
+                            <div class="slide3"></div>
+                            <div class="slide4"></div>
+                        </div>
+                    </div>
+                <div class="right-button"><img src="images/icon-next.svg" alt=""></div>
+            </div>
+            <div class="popup-small-photos">
                 <div class="photo1">
                     <img class="photo1-img" src="images/image-product-1-thumbnail.jpg">
                 </div>
