mobil versiyon eklendi

--- a/index.html
+++ b/index.html
@@ -108,6 +108,75 @@
             </div>
         </div>
     </div>
+
+    <div class="mobile">
+
+        <div class="mob-shadow"></div>
+        <div class="mob-side-bar">
+            <img class="mob-close" src="images/icon-close-gray.svg" alt="">
+            <p>Collections</p>
+            <p>Men</p>
+            <p>Women</p>
+            <p>About</p>
+            <p>Contact</p>
+        </div>
+
+        <div class="mob-header">
+            <div class="mob-left">
+                <img class="mob-menu" src="images/icon-menu.svg" alt="">
+                <img class="mob-logo" src="images/logo.svg" alt="">
+            </div>
+            <div class="mob-right">
+                <img class="mob-cart" src="images/icon-cart.svg" alt="">
+                <div class="mob-badge"></div>
+                <div class="mob-profile"></div>
+            </div>
+        </div>
+
+        <div class="mob-space"></div>
+        
+        <div class="mob-slider">
+            <div class="mob-left-but"><img src="images/icon-previous.svg" alt=""></div>
+            <div class="mob-frame">
+                <div class="mob-slide">
+                    <div class="mob-slide1"></div>
+                    <div class="mob-slide2"></div>
+                    <div class="mob-slide3"></div>
+                    <div class="mob-slide4"></div>
+                </div>
+            </div>
+            <div class="mob-right-but"><img src="images/icon-next.svg" alt=""></div>
+        </div>
+
+        <div class="mob-infos">
+            <p class="mob-company">SNEAKER COMPANY</p>
+            <h1 class="mob-title">Fall Limited Edition Sneakers</h1>
+            <p class="mob-info">These low-profile sneakers are your perfect casual wear companion. 
+                Featuring a durable rubber outer sole, they'll withstand everything the weather
+                 can offer.</p>
+            <div class="mob-prices-container">
+                <div class="mob-prices">
+                    <h2 class="mob-the-price">$125.00</h2>
+                    <p class="mob-discount">50%</p>
+                </div>
+                <p class="mob-old-price">$250.00</p>
+            </div>
+
+                <div class="mob-count">
+                    <p class="mob-minus">-</p>
+                    <p class="mob-number">0</p>
+                    <p class="mob-plus">+</p>
+                </div>
+                <div class="mob-add">
+                    <svg class="mob-shopping-cart" width="22" height="20" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M20.925 3.641H3.863L3.61.816A.896.896 0 0 0 2.717 0H.897a.896.896 0 1 0 0 1.792h1l1.031 11.483c.073.828.52 1.726 1.291 2.336C2.83 17.385 4.099 20 6.359 20c1.875 0 3.197-1.87 2.554-3.642h4.905c-.642 1.77.677 3.642 2.555 3.642a2.72 2.72 0 0 0 2.717-2.717 2.72 2.72 0 0 0-2.717-2.717H6.365c-.681 0-1.274-.41-1.53-1.009l14.321-.842a.896.896 0 0 0 .817-.677l1.821-7.283a.897.897 0 0 0-.87-1.114ZM6.358 18.208a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm10.015 0a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm2.021-7.243-13.8.81-.57-6.341h15.753l-1.383 5.53Z" fill="#FFFFFF" fill-rule="nonzero"/>
+                    </svg>
+                    <p class="mob-add-to-cart">Add to cart</p>
+                </div>
+
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
