alışveriş sepeti eklendi, düzeltmeler yapılacak

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <header>
             <div class="nav">
-                <img src="images/logo.svg" class="logo">
+                <img src="images/logo.svg" class="logo" id="logo">
                 <div class="menu">
                     <p>Collections</p>
                     <p>Men</p>
@@ -29,8 +29,17 @@
                     <div class="badge"></div>
                 </div>
                 <div class="profile"></div>
+            </div>
+            <div class="basket" id="basket">
+                <div class="cart-title">
+                    <p class="cart-title-p">Cart</p>
+                </div>
+                <div class="cart-content">
+                    <p class="cart-empty">Your cart is empty.</p>
+                </div>
             </div>    
         </header>
+
         <main>
             <div class="photos">
                 <div class="big-photo"></div>
@@ -56,7 +65,7 @@
                     Featuring a durable rubber outer sole, they'll withstand everything the weather
                      can offer.</p>
                 <div class="prices">
-                    <h2 class="the-price">$125.00</h2>
+                    <h2 class="the-price-dolar">$ <h2 class="the-price">125.00</h2></h2>
                     <p class="discount">50%</p>
                 </div>
                 <p class="old-price">$250.00</p>
